@@ -1,3 +1,9 @@
+2010-12-27  Nicola Pero <nicola.pero@meta-innovation.com>
+
+	* NSAttributeDescription.m ([-initWithCoder:],
+	[-encodeWithCoder:]): Explicitly encode and decode NSAttributeType
+	as 'int' to work across compiler versions.
+
 2007-12-13	Nikolaus Schaller <hns@computer.org>
 
         * made compile on MacOS X and mySTEP
